fixed UI for contact page on small browsers

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -531,9 +531,10 @@
   border-radius: 0.2rem;
   padding-left: 10px;
   margin-left: 0;
-  > p {
-    padding: 5rem 1rem;
-  }
+}
+
+.warning p {
+  padding: 5rem 1rem;
 }
 
 .warning {
@@ -551,6 +552,12 @@
   .column {
     width: 100%;
   }
+  .row {
+    flex-direction: column;
+  }
+  .column:last-child {
+    display: none;
+  }
 }
 .row {
   display: flex;
@@ -562,7 +569,7 @@
 .mopen span {
   background: #eceff4;
 }
-.prose :where(hr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+.prose hr:not([class~="not-prose"], [class~="not-prose"] *) {
   border-color: #2e3440;
   border-top-width: 1px;
   margin-top: 3em;
